Correct footer mobile spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -492,9 +492,11 @@ footer p {
 
     .featured-text { width: 100%; }
     .featured-text h1 {font-size: 3em; margin: 50px auto 0; max-width: 280px; }
-
+    
+    .content { padding-bottom: 70px; }
+    
     footer .logo { float: none; }
-    footer nav.right { float: none; margin-top: 30px; }
+    footer nav.right { float: none; margin-top: 60px; }
     footer nav a { float: none; margin: 0; }
     footer .container { padding-bottom: 110px; }
 }
